--- a/style.css
+++ b/style.css
@@ -18,3 +18,14 @@ body {
   display: block;
   margin: 0 auto;
 }
+
+@media (max-width: 600px) {
+  .background-image {
+    width: 100vw;
+    max-width: none;
+  }
+
+  .container {
+    padding: 0;
+  }
+}
